2006-11-06  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Device documentation procedure cleaned up a lot
	* Bumped version up to 2.1.1

2006-11-05  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Configuration parsing now expands environment variables.
	* Devices are now automatically probed to generate documentation.
	* Device documentation improved.
	* Manual cleaned up.

2006-10-28  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Integrated some video4linux stuff from Jonas Ruesch (thanks!).
	* Implemented "envelope" information that could be passed
	along from port to port, such as timestamps.

2006-10-25  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Bumped version up to 2.1.0
	* Consistent GPL licensing, copyright statements

2006-10-24  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* License comments updated, removed older references to AFL

2006-10-23  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* YARPConfig.cmake fixed so that windows paths with 
	spaces are OK.  Fixes bug 1582945.

2006-10-07  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Bugfix - PortReaderBuffer was not always returning 
	messages in the right order, oops!

2006-09-14  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Integrated with ffmpeg for reading audio/visual material
	* Bugfix for sound network format
	* C# swig interface tested (added to Java, Perl, Python, ...)

2006-09-01  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Fixed bug where non-buffered Port closed with data pending 
	would wait for that to get read
	* Fixed ports so you can open and close them repeatedly
	* Made some Solaris fixes - YARP works there now!
	* Integrated opencv_grabber
	* Added in some docs developed for summer school

2006-08-24  Paul Fitzpatrick  <paulfitz@localhost.localdomain>

	* Bumped version up to 2.0.7
	* Started portaudio device wrapper -- seems a good library
	for doing cross-platform audio
